# blackshard

./: .gitignore  Cargo.toml  README.md  SECURITY.md  blackshard_driver.c  build-driver.ps1  build.bat  deploy.ps1  disable-test-signing.ps1  enable-test-signing.ps1  install.ps1  main.rs  test_flt.ps1  test_imagepath.ps1  test_sc_config.ps1  test_svc105.ps1  test_svc_105_out.txt  test_svc_inline.ps1  test_svc_script.ps1  uninstall.ps1  verify.ps1
.cargo/: audit.toml
.github/workflows/: ci.yml
blackshard-amsi/: Cargo.toml  build.rs
blackshard-amsi/src/: lib.rs
docs/: DETECTION-STRATEGY.md  PHASE1-RELEASE-READINESS.md  TESTING.md  THREAT-MODEL.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: scan_bytes.rs  vba_decompress.rs
installer/: README.md  build-development-vm-installer.ps1  build-production-installer.ps1
installer/bundle/: Blackshard.Bundle.wixproj  Bundle.wxs
installer/development/: SetupUi.cs  vm-setup.ps1
installer/package/: Blackshard.Package.wixproj  Product.wxs
src/: amsi.rs  archive.rs  atomic_file.rs  behavior.rs  config.rs  connection_supervisor.rs  definitions.rs  detection.rs  driver_installer.rs  elevation.rs  engine.rs  history.rs  ipc.rs  lib.rs  main.rs  model.rs  notification_agent.rs  notifications.rs  quarantine.rs  readiness.rs  realtime.rs  rules.rs  scan_manager.rs  self_test.rs  service.rs  similarity.rs  trust.rs  ui.rs  update_client.rs  updater.rs  vba.rs  verdict_cache.rs
src/clamav_worker/: mod.rs  protocol.rs  sandbox.rs
src/driver/: blackshard.inf  blackshard.vcxproj  blackshard_driver.c
src/driver/x64/Release/: blackshard.sys.recipe  blackshard.vcxproj.FileListAbsolute.txt
src/driver/x64/Release/blackshard/: blackshard.cat  blackshard.inf
src/driver/x64/Release/blackshard.tlog/: Cl.items.tlog  blackshard.lastbuildstate  drvcat.read.1.tlog  inf2cat-expand.15280.write.1.tlog  inf2cat.write.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  stampinf.command.1.tlog
src/freshclam/: downloader.rs  mod.rs  native_index.rs  scheduler.rs
src/parser_worker/: mod.rs  protocol.rs  sandbox.rs
src/x64/Release/: blackshard.inf  blackshard.sys  blackshard.sys.recipe  blackshard.vcxproj.FileListAbsolute.txt
src/x64/Release/blackshard.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  DrvCat.command.1.tlog  Inf2Cat.command.1.tlog  blackshard.lastbuildstate  drvcat.write.1.tlog  inf2cat-expand.15280.read.1.tlog  inf2cat-expand.read.1.tlog  inf2cat-expand.write.1.tlog  inf2cat.read.1.tlog  link.command.1.tlog  link.secondary.1.tlog  stampinf.read.1.tlog
tools/: Build-StaticDefinitionFeed.ps1  Collect-CompatibilityEvidence.ps1  Get-ClamAvRuntime.ps1  Import-ClamAvSha256.ps1  Import-YaraSource.ps1  Measure-DetectionCorpus.ps1  Publish-DefinitionBundle.ps1  Score-DetectionCorpus.ps1
