[package]
name = "blackshard"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-sys = { version = "0.52.0", features = ["Win32_Foundation"] }
eframe = { version = "0.27.2", default-features = false, features = ["accesskit", "default_fonts", "wgpu"] }
wgpu = { version = "0.19.4", default-features = false, features = ["dx12"] }
chrono = "0.4.38"
